[gd_scene load_steps=3 format=2]

[ext_resource path="res://wall.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wall" type="Sprite" parent="."]
position = Vector2( -108.747, 324.293 )
scale = Vector2( 0.609314, 0.609314 )
texture = ExtResource( 1 )

[node name="ValuesError" type="AcceptDialog" parent="."]
margin_left = 100.804
margin_top = 319.212
margin_right = 218.804
margin_bottom = 411.212
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Alarm!"
dialog_text = "Wrong values!
Max height = 30
Max width = 40"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 160.0
margin_bottom = 190.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightContainer" type="HBoxContainer" parent="Container"]
margin_right = 150.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Height_Label" type="TextEdit" parent="Container/HeightContainer"]
margin_right = 73.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HEIGHT"
readonly = true

[node name="Height_Amount" type="TextEdit" parent="Container/HeightContainer"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "20"

[node name="WidthContainer" type="HBoxContainer" parent="Container"]
margin_top = 35.0
margin_right = 150.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Width_Label" type="TextEdit" parent="Container/WidthContainer"]
margin_right = 73.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "WIDTH"
readonly = true

[node name="Width_Amount" type="TextEdit" parent="Container/WidthContainer"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "10"

[node name="Launch" type="Button" parent="Container"]
margin_top = 70.0
margin_right = 150.0
margin_bottom = 90.0
text = "LAUNCH"
